--- a/NewBook.xaml
+++ b/NewBook.xaml
@@ -21,27 +21,29 @@
 
             <StackPanel Grid.Row="1" Height="Auto" Width="Auto" HorizontalAlignment="Center">
                 <Label Content="Book Title:" FontFamily="Moonbeam" FontSize="20" Margin="0,0,0,0" />
-                <TextBox FontFamily="Moonbeam" FontSize="16" Height="35" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
+                <TextBox Name="BookTitle" FontFamily="Moonbeam" FontSize="16" Height="35" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
                 <Label Content="Book Author:" FontFamily="Moonbeam" FontSize="20" Margin="0,5,0,0" />
-                <TextBox FontFamily="Moonbeam" FontSize="16" Height="35" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
+                <TextBox Name="BookAuthor" FontFamily="Moonbeam" FontSize="16" Height="35" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
                 <Label Content="Book Format:" FontFamily="Moonbeam" FontSize="20" Margin="0,5,0,0" />
-                <ComboBox FontFamily="Moonbeam" FontSize="16" Height="35" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0">
+                <ComboBox Name="FormatBox" FontFamily="Moonbeam" FontSize="16" Height="35" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0">
                     <ComboBoxItem Content="Hardcover"/>
                     <ComboBoxItem Content="Softcover"/>
                     <ComboBoxItem Content="eBook"/>
                     <ComboBoxItem Content="Audiobook"/>
                 </ComboBox>
                 <Label Content="Book ISBN:" FontFamily="Moonbeam" FontSize="20" Margin="0,5,0,0" />
-                <TextBox FontFamily="Moonbeam" FontSize="16" Height="35" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
+                <TextBox x:Name="IsbnBox" FontFamily="Moonbeam" FontSize="16" Height="35" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
                 <Label Content="Notes:" FontFamily="Moonbeam" FontSize="20" Margin="0,5,0,0" />
-                <TextBox FontFamily="Moonbeam" FontSize="16" Height="75" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
-                <Button x:Name="Add" Content="Add" Height="40" Width="125" HorizontalAlignment="Center" Margin="30"/>
+                <TextBox Name="NotesBox" FontFamily="Moonbeam" FontSize="16" Height="75" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
+                <Button x:Name="Add" Content="Add Book" FontSize="18" FontFamily="Moonbeam" Height="40" Width="125" HorizontalAlignment="Center" Margin="50" Click="Add_Click"/>
             </StackPanel>
             <StackPanel Grid.Column="1" Grid.Row="1" Width="Auto">
                 <Border BorderBrush="Black" BorderThickness="2" Height="200" Width="150" Margin="30,20,30,0">
-                    <Image Width="150" Height="200"/>
+                    <Border.Background>
+                        <ImageBrush x:Name="Cover" Stretch="Fill"/>
+                    </Border.Background>
                 </Border>
-                <Button Content="Get Cover" Height="40" Width="125" Margin="0,20,05,0" Click="Button_Click"/>
+                <Button Name="CoverButton" Content="Get Cover" Height="40" Width="125" FontFamily="Moonbeam" FontSize="18" Margin="0,20,05,0" Click="CoverButton_Click"/>
                 <Label Content="Choose your Tags:" FontFamily="Moonbeam" FontSize="24" HorizontalAlignment="Center" Margin="10"   />
                 <StackPanel Orientation="Horizontal">
                     <ListBox Margin="50,0,0,0" Name="TagsBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="Auto" Height="Auto">
@@ -78,28 +80,28 @@
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
                             <CheckBox Name="FantassyChecks">
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Fantasy"></TextBlock>
+                                    <TextBlock Text="Heist"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
                             <CheckBox Name="ContemsChecks">
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Contemporary"></TextBlock>
+                                    <TextBlock Text="Witchcraft"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
                             <CheckBox Name="MystesryChecks">
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Mystery"></TextBlock>
+                                    <TextBlock Text="Time Travel"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
                             <CheckBox Name="HorrorChscks">
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Horrors"></TextBlock>
+                                    <TextBlock Text="Enimies to Lovers"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
