--- a/NewBook.xaml
+++ b/NewBook.xaml
@@ -38,68 +38,68 @@
                 <Button x:Name="Add" Content="Add Book" FontSize="18" FontFamily="Moonbeam" Height="40" Width="125" HorizontalAlignment="Center" Margin="50" Click="Add_Click"/>
             </StackPanel>
             <StackPanel Grid.Column="1" Grid.Row="1" Width="Auto">
-                <Border BorderBrush="Black" BorderThickness="2" Height="200" Width="150" Margin="30,20,30,0">
+                <Border BorderBrush="Black" BorderThickness="2" Height="200" Width="150" Margin="30,10,30,0">
                     <Border.Background>
                         <ImageBrush x:Name="Cover" Stretch="Fill"/>
                     </Border.Background>
                 </Border>
-                <Button Name="CoverButton" Content="Get Cover" Height="40" Width="125" FontFamily="Moonbeam" FontSize="18" Margin="0,20,05,0" Click="CoverButton_Click"/>
+                <Button Name="CoverButton" Content="Get Cover" Height="40" Width="125" FontFamily="Moonbeam" FontSize="18" Margin="0,10,05,0" Click="CoverButton_Click"/>
                 <Label Content="Choose your Tags:" FontFamily="Moonbeam" FontSize="24" HorizontalAlignment="Center" Margin="10"   />
                 <StackPanel Orientation="Horizontal">
                     <ListBox Margin="50,0,0,0" Name="TagsBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="Auto" Height="Auto">
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
-                            <CheckBox Name="FantasyChecks">
+                            <CheckBox Name="Fantasy">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Fantasy"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
-                            <CheckBox Name="ContempChecks">
+                            <CheckBox Name="Contemporary">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Contemporary"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
-                            <CheckBox Name="MysteryChecks">
+                            <CheckBox Name="Mystery">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Mystery"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
-                            <CheckBox Name="HorrorChecks">
+                            <CheckBox Name="Horror">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Horror"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                     </ListBox>
-                    <ListBox Margin="10,0,0,0" Name="TagsBoxs" VerticalAlignment="Top" Width="Auto" Height="Auto">
+                    <ListBox Margin="0,0,0,0" Name="TagsBoxs" VerticalAlignment="Top" Width="Auto" Height="Auto">
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
-                            <CheckBox Name="FantassyChecks">
+                            <CheckBox Name="Heist">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Heist"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
-                            <CheckBox Name="ContemsChecks">
+                            <CheckBox Name="Witchcraft">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Witchcraft"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
-                            <CheckBox Name="MystesryChecks">
+                            <CheckBox Name="TimeTravel">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Time Travel"></TextBlock>
                                 </StackPanel>
                             </CheckBox>
                         </ListBoxItem>
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
-                            <CheckBox Name="HorrorChscks">
+                            <CheckBox Name="Enemy">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Enimies to Lovers"></TextBlock>
                                 </StackPanel>
