--- a/NewBook.xaml
+++ b/NewBook.xaml
@@ -31,7 +31,7 @@
                     <ComboBoxItem Content="eBook"/>
                     <ComboBoxItem Content="Audiobook"/>
                 </ComboBox>
-                <Label Content="Book ISBN:" FontFamily="Moonbeam" FontSize="20" Margin="0,5,0,0" />
+                <Label Name="IsbnLabel" Content="Book ISBN:" FontFamily="Moonbeam" FontSize="20" Margin="0,5,0,0" />
                 <TextBox x:Name="IsbnBox" FontFamily="Moonbeam" FontSize="16" Height="35" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
                 <Label Content="Notes:" FontFamily="Moonbeam" FontSize="20" Margin="0,5,0,0" />
                 <TextBox Name="NotesBox" FontFamily="Moonbeam" FontSize="16" Height="75" Width="400" HorizontalAlignment="Left" Margin="5,0,0,0"/>
@@ -43,8 +43,8 @@
                         <ImageBrush x:Name="Cover" Stretch="Fill"/>
                     </Border.Background>
                 </Border>
-                <Button Name="CoverButton" Content="Get Cover" Height="40" Width="125" FontFamily="Moonbeam" FontSize="18" Margin="0,10,05,0" Click="CoverButton_Click"/>
-                <Label Content="Choose your Tags:" FontFamily="Moonbeam" FontSize="24" HorizontalAlignment="Center" Margin="10"   />
+                <Button Name="CoverButton" Content="Get Cover" Height="40" Width="125" FontFamily="Moonbeam" FontSize="18" Margin="0,20,05,10" Click="CoverButton_Click"/>
+                <Label Content="Choose your Tags:" FontFamily="Moonbeam" FontSize="24" HorizontalAlignment="Center"    />
                 <StackPanel Orientation="Horizontal">
                     <ListBox Margin="50,0,0,0" Name="TagsBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="Auto" Height="Auto">
                         <ListBoxItem  FontFamily="Moonbeam" FontSize="20" FontWeight="Bold">
